--- a/kingbot.html
+++ b/kingbot.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="../assets/css/main.css" />
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
   <style>
   /* ===== Boe-Bot Signature Table ===== */
@@ -382,4 +383,5 @@
 </script>
 
 </body>
+
 </html>
