--- a/AFROBOT.html
+++ b/AFROBOT.html
@@ -310,7 +310,7 @@
 
               <!-- ✅ REUSING chart.html -->
               <iframe 
-                src="chart.html"
+                src="../chart.html"
                 title="Subsumption Architecture Chart"
                 frameborder="0"
                 loading="lazy">
@@ -776,4 +776,5 @@
  
 </body>
 </html>
+
 
