--- a/AFROBOT.html
+++ b/AFROBOT.html
@@ -310,7 +310,7 @@
 
               <!-- ✅ REUSING chart.html -->
               <iframe 
-                src="../chart.html"
+                src="Chart.html"
                 title="Subsumption Architecture Chart"
                 frameborder="0"
                 loading="lazy">
@@ -776,5 +776,6 @@
  
 </body>
 </html>
+
 
 
