Demo video updated
AfrobotDemo.mp4 added

--- a/AFROBOT.html
+++ b/AFROBOT.html
@@ -593,7 +593,7 @@
     <div class="video-container">
       <!-- TODO: Replace src with final demo video -->
       <video controls muted playsinline>
-        <source src="videos/Demo.mp4" type="video/mp4" />
+        <source src="videos/AfrobotDemo.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
@@ -776,6 +776,7 @@
  
 </body>
 </html>
+
 
 
 
