--- a/kingbot.html
+++ b/kingbot.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../assets/css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
+
   <style>
   /* ===== Boe-Bot Signature Table ===== */
 
@@ -356,11 +357,12 @@
 
 <!-- Scripts -->>
 
-<script src="../assets/js/jquery.min.js"></script>
-<script src="../assets/js/browser.min.js"></script>
-<script src="../assets/js/breakpoints.min.js"></script>
-<script src="../assets/js/util.js"></script>
-<script src="../assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
 <script>
   const openBB = document.getElementById("open-boebot-chart");
@@ -385,3 +387,4 @@
 </body>
 
 </html>
+
