--- a/kingbot.html
+++ b/kingbot.html
@@ -120,13 +120,17 @@
 </head>
 
 <body class="is-preload">
+
+  
 <div id="page-wrapper">
 
   <!-- Header -->
 
   <header id="header">
-    <h1><a href="../index.html">Mouhameth Ba</a></h1>
-    <nav><a href="#menu">Menu</a></nav>
+    <h1><a href="index.html">Mouhameth Ba</a></h1>
+    <nav>
+      <a href="#menu">Menu</a>
+    </nav>
   </header>
 
   <!-- Menu -->
@@ -135,11 +139,11 @@
     <div class="inner">
       <h2>Menu</h2>
       <ul class="links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../bio.html">Bio</a></li>
-        <li><a href="../projects.html">Projects</a></li>
-        <li><a href="../experience.html">Experience</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bio.html">Bio</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <a href="#" class="close">Close</a>
     </div>
@@ -387,4 +391,5 @@
 </body>
 
 </html>
+
 
