--- a/kingbot.html
+++ b/kingbot.html
@@ -5,7 +5,7 @@
   <title> Boe-Bot King | Mouhameth Ba</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="../assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
 
@@ -391,5 +391,6 @@
 </body>
 
 </html>
+
 
 
